# TIMED_ML_Pipeline

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
data/: Demo_Data.csv
dicts/: WP2_Dict.json
scripts/: analysis.py  cv_pipeline.py  data_exploration.py  data_processing.py  plotting.py  pycaret_pipeline.py  regression_pipeline.py  utils.py
tests/: basic.ipynb
