[project]
name = "timed-ml-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.3.2",
    "keyboard>=0.13.5",
    "lightgbm>=4.6.0",
    "matplotlib>=3.7.5",
    "numpy>=1.26.4",
    "optuna>=4.5.0",
    "pandas>=2.1.4",
    "plotly>=5.24.1",
    "psutil>=7.1.0",
    "pycaret>=3.3.2",
    "scikit-learn>=1.4.2",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "streamlit>=1.49.1",
    "xgboost>=3.0.5",
]
